# txauth

./: LICENSE  README.md
bindings/python/: pyproject.toml
bindings/python/txauth/: __init__.py  tx_auth.py
spec/: TXAUTH_SPEC.md
src/: tx_auth.h
